--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+PrLX1gqeA4i3RjHeVJqgzUYxAbSNy3t+e7rSmn3fBs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
